Tests/CompilerTests/negative/no-given-2.hylo
trait P {}

struct A { memberwise init }
struct B { memberwise init }

given A: P {}

fun f<T where T: P, A: P>(x: T) {}

fun main() {
  f(x: B())
}

